# BalanceBot

./: .gitignore  README.md  logo.xcf  pid.txt
BalanceBotSoft/: BalanceBotSoft.c  CMakeLists.txt  acc_gyro.c  acc_gyro.h  controler.c  controler.h  encoder_rot.c  encoder_rot.h  imu.c  imu.h  logo.h  menu.c  menu.h  motor.c  motor.h  mpu6050_i2c.c  oled.c  oled.h  pid.c  pid.h  pins.c  pins.h  test.c
BalanceBotSoft/ssd1306/: ssd1306.c  ssd1306.h
PC/: main.py  main2.py
hardware/: ibom.html
hardware/BalanceBot/: BalanceBot.brd  BalanceBot.sch  eeprom.brd  eeprom.sch  eeprom_2layer.brd  eeprom_2layer.sch
misc/: logo.xcf  menu.txt
software/: CMakeLists.txt  adc.c  adc.h  controler.c  controler.h  encoder_rot.h  filters.c  imu.c  imu.h  main.c  menu.c  menu.h  motor.c  motor.h  oled.c  pins.h  remote_control.c  remote_control.h  spp_counter.c
software/ssd1306/: ssd1306.c  ssd1306.h
